--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://practicelc1:asde1234@cluster0.riie1b2.mongodb.net/"
+DATABASE_URL="mongodb+srv://practicelc1:asde1234@cluster0.riie1b2.mongodb.net/test"
