--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://practicelc1:asde1234@cluster0.riie1b2.mongodb.net/test"
+NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
+
+NEXTAUTH_SECRET="NEXT_AUTH_SECRET"
